--- a/app/src/main/res/layout/activity_mycar_list.xml
+++ b/app/src/main/res/layout/activity_mycar_list.xml
@@ -52,7 +52,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/carlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
 
     </android.support.v7.widget.RecyclerView>
     </com.andview.refreshview.XRefreshView>
