--- a/app/src/main/res/layout/layout_car_list_item.xml
+++ b/app/src/main/res/layout/layout_car_list_item.xml
@@ -196,6 +196,7 @@
                     android:background="@drawable/unchecked_radio_button"
                     android:button="@null"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:text="详情"
                     android:textColor="@color/title_color" />
 
