--- a/app/src/main/res/layout/activity_car_manager_real.xml
+++ b/app/src/main/res/layout/activity_car_manager_real.xml
@@ -193,7 +193,7 @@
 </LinearLayout>
 
     <RelativeLayout
-
+        android:id="@+id/device_list"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
