--- a/app/src/main/res/layout/activity_vehicle_monitoring.xml
+++ b/app/src/main/res/layout/activity_vehicle_monitoring.xml
@@ -17,6 +17,7 @@
             android:clickable="true">
         </com.baidu.mapapi.map.MapView>
         <RelativeLayout
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true">
