--- a/app/src/main/res/layout/list_device_item.xml
+++ b/app/src/main/res/layout/list_device_item.xml
@@ -2,10 +2,15 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="160dp"
     android:orientation="vertical"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
+    android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/page_color" />
     <RelativeLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
@@ -31,6 +36,8 @@
         android:layout_height="1dp"
         android:background="@color/divider_line"/>
     <LinearLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -49,6 +56,8 @@
             android:text="电量90%"/>
     </LinearLayout>
     <LinearLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -62,6 +71,8 @@
             android:text="绑车信息：苗北北，L11111111111111111111111"/>
     </LinearLayout>
     <LinearLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -81,6 +92,8 @@
         android:layout_height="1dp"
         android:background="@color/divider_line"/>
     <RelativeLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="right"
