--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="white">#FFFFFF</color>
     <color name="un_white">#00FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="device_status_xm">#2a58ad</color>
+
     <color name="lightblue">#00CCFF</color>
     <color name="morelightblue">#e7f1f5</color>
     <color name="gray">#f2f2f2</color>
