--- a/app/src/main/res/layout/list_device_item.xml
+++ b/app/src/main/res/layout/list_device_item.xml
@@ -43,15 +43,18 @@
         android:orientation="horizontal"
         android:layout_weight="1">
         <TextView
+            android:layout_marginRight="15dp"
             android:id="@+id/warning_name"
             android:layout_width="wrap_content"
+            android:gravity="center_vertical"
             android:layout_height="wrap_content"
             android:text="暂无报警"/>
         <TextView
             android:id="@+id/dl"
-            android:layout_marginLeft="15dp"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:textColor="@color/tv_online"
             android:text="电量90%"/>
     </LinearLayout>
@@ -67,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
+            android:gravity="center_vertical"
             android:ellipsize="end"
             android:text="绑车信息：苗北北，L11111111111111111111111"/>
     </LinearLayout>
@@ -83,6 +87,7 @@
             android:id="@+id/car_loc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:maxLines="2"
             android:ellipsize="end"
             android:text="当前定位：2018-07-02 11:22，地址和时间最多显示到两行地址和时间最多显示到两行地址和时间最多显示到两行..."/>
