--- a/app/src/main/res/layout/fragment_device_message.xml
+++ b/app/src/main/res/layout/fragment_device_message.xml
@@ -113,11 +113,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center_vertical"
-        android:layout_weight="5.2">
+        android:layout_weight="4">
         <TextView
             android:id="@+id/loc_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="3"
+            android:ellipsize="end"
             android:text="最后定位地址:江苏省无锡市锡山区云林街道风味路二号"/>
     </LinearLayout>
     <View
