--- a/app/src/main/res/layout/list_item_car_veh.xml
+++ b/app/src/main/res/layout/list_item_car_veh.xml
@@ -2,6 +2,8 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="80dp"
     android:orientation="vertical"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <View
         android:layout_width="match_parent"
@@ -12,11 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:gravity="center_vertical"
         android:text="刘珊珊"/>
     <TextView
         android:id="@+id/vin"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:gravity="center_vertical"
         android:layout_weight="1"
         android:text="L123****4567 · 粤B12345"/>
     <RelativeLayout
@@ -31,18 +35,28 @@
             <TextView
                 android:id="@+id/device1"
                 android:gravity="center"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:visibility="gone"
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_height="wrap_content"
                 android:text="K12345"
+                android:layout_gravity="center_vertical"
                 android:background="@drawable/dl_radius"
                 android:textColor="@color/device_msg"
                 />
             <TextView
                 android:id="@+id/device2"
                 android:gravity="center"
+                android:visibility="gone"
                 android:layout_marginLeft="5dp"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:layout_gravity="center_vertical"
                 android:text="K12345"
                 android:background="@drawable/dl_radius"
                 android:textColor="@color/device_msg"
@@ -50,9 +64,14 @@
             <TextView
                 android:id="@+id/device3"
                 android:gravity="center"
+                android:layout_gravity="center_vertical"
+                android:visibility="gone"
                 android:layout_marginLeft="5dp"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:text="K12345"
                 android:background="@drawable/green_dl_radius"
                 android:textColor="@color/tv_online"
