--- a/app/src/main/res/layout/activity_vehicle_monitoring.xml
+++ b/app/src/main/res/layout/activity_vehicle_monitoring.xml
@@ -35,7 +35,7 @@
                     android:layout_height="3dp"
                     android:background="@color/dzwl_color"/>
                 <TextView
-
+                    android:id="@+id/tongji"
                     android:gravity="center"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
